# healthcare-Data-Pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  gold_loader.py  pyproject.toml
dashboard/: Dockerfile.superset  README.md  superset_config.py
doc/: api-ingestion.md  data_pipeline.md  healthcare_pipeline_plan.md  run-process-notes.md  technology-decisions.md
ingestion/: __init__.py  cms_client.py  config.py  ingest_cms_part_d.py  manifest.py  metadata.py  storage.py
processing/: __init__.py  bronze_to_silver.py  gold_marts.py  silver_to_gold.py
spark/jobs/: bronze_to_silver.py  inspect_parquet.py  silver_to_gold.py  silver_to_gold_marts.py
sql/: 001_create_metadata_tables.sql  002_create_gold_tables.sql  003_create_gold_marts.sql  004_create_dashboard_views.sql
tests/: test_bronze_to_silver.py  test_gold_marts.py  test_ingest_cms_part_d.py  test_manifest.py  test_silver_to_gold.py
