[project]
name = "healthcare-data-pipeline"
version = "0.1.0"
description = "Batch healthcare data pipeline for CMS Medicare Part D Prescribers data."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "minio>=7.2.0",
    "psycopg[binary]>=3.1.0",
    "pyspark>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["ingestion", "processing"]
